--- a/init.org
+++ b/init.org
@@ -212,7 +212,7 @@ I think this is a little too aggressive right now, but it's a cool idea.
  ; reload the fringe color after loading the theme
  (cwm-update-fringe-background))
 #+end_src
-* Miscellaneous
+* Editing Packages
 ** Global Keybindings
 #+begin_src emacs-lisp :load yes
 (global-set-key (kbd "M-k") (lambda () (interactive) (kill-this-buffer nil)))
@@ -757,37 +757,6 @@ If non-nil, Unison will only propagate changes from `unison-root1` to `unison-ro
 ;;  aggressive-indent
 ;;  :config (aggressive-indent-global-mode nil))
 #+end_src
-* Elisp
-** Elisp code libraries
-#+begin_src emacs-lisp :load yes
-(use-package dash)
-(use-package ht)
-#+end_src
-** Elisp UI
-#+begin_src emacs-lisp :load yes
-(use-package eros :config (eros-mode t))
-(use-package
- lisp-extra-font-lock
- :config (lisp-extra-font-lock-global-mode 1))
-
-(use-package elisp-docstring-mode)
-(use-package
- highlight-function-calls
- :hook (emacs-lisp-mode . highlight-function-calls-mode))
-
-(use-package format-all :hook (elisp-mode . format-all-mode))
-(use-package
- inspector
- :straight
- '(inspector :type git :host github :repo "mmontone/emacs-inspector"))
-
-(setq eval-expression-print-length nil)
-(setq eval-expression-print-level nil)
-
-(add-to-list
- 'auto-mode-alist
- '("\\.dir-locals\\(?:-2\\)?\\.el\\'" . emacs-lisp-mode))
-#+end_src
 * Dired
 #+begin_src emacs-lisp :load yes
 (setq
@@ -840,7 +809,7 @@ I'm trying migrating from ~projectile~ onto ~project.el~ for its purported benef
  )
 #+end_src
 ** Projectile
-#+begin_src emacs-lisp :load yes
+#+begin_src emacs-lisp :load no
 (use-package
  projectile
  :init (setq projectile-git-submodule-command nil)
@@ -865,7 +834,8 @@ I'm trying migrating from ~projectile~ onto ~project.el~ for its purported benef
  (add-to-list 'projectile-globally-ignored-directories "/venv")
  (add-to-list 'projectile-globally-ignored-directories "/data")
  (add-to-list 'projectile-globally-ignored-directories "/typings")
- (add-to-list 'projectile-globally-ignored-directories "/node_modules")
+ (add-to-list
+  'projectile-globally-ignored-directories "/node_modules")
  (add-to-list 'projectile-globally-ignored-directories "/.mypy_cache")
  (add-to-list
   'projectile-globally-ignored-directories "/.pytest_cache")
@@ -878,7 +848,10 @@ I'm trying migrating from ~projectile~ onto ~project.el~ for its purported benef
  ;; (add-hook 'magit-run-section-hook 'projectile-invalidate-cache)
  (add-hook
   'magit-section-post-command-hook 'projectile-invalidate-cache)
-)
+
+ (setq projectile-ignored-project-function
+       (lambda (project-root)
+         (string-match-p tramp-file-name-regexp project-root))))
 #+end_src
 * Completions
 ** Corfu
@@ -1082,191 +1055,6 @@ From [[https://github.com/minad/corfu/wiki#configuring-corfu-for-eglot][this sou
  ;; Enable recursive minibuffers
  (setq enable-recursive-minibuffers t))
 #+END_SRC
-** Selectrum
-Currently using Vertico over this
-#+begin_src emacs-lisp :load no
-(setq projectile-completion-system 'default)
-;; (setq projectile-completion-system 'default)
-(use-package selectrum :config (selectrum-mode t))
-
-(use-package
- selectrum-prescient
- :config (selectrum-prescient-mode t) (prescient-persist-mode t)
-
-
- (setq enable-recursive-minibuffers t)
-
- ;; Persist history over Emacs restarts
- (savehist-mode)
-
- ;; Optional performance optimization
- ;; by highlighting only the visible candidates.
- (setq orderless-skip-highlighting (lambda () selectrum-is-active))
- (setq selectrum-highlight-candidates-function
-       #'orderless-highlight-matches))
-#+end_src
-** Ivy/Counsel/Swiper
-Currently not using this in favor of Vertico
-#+begin_src emacs-lisp  :load no
-(use-package ivy)
-(use-package counsel)
-(use-package swiper)
-
-;; Case insensitive searchs
-(setq completion-ignore-case t)
-(setq case-fold-search nil)
-
-(setq
- counsel-find-file-ignore-regexp
- "^\\.?#\\|^\\.\\(DS_Store\\|localized\\|AppleDouble\\)$\\|^\\.\\.$")
-
-(ivy-mode 1) ;; Turn on ivy by default
-(setq ivy-use-virtual-buffers t) ;; no idea, but recommended by project maintainer
-(setq enable-recursive-minibuffers t) ;; no idea, but recommended by project maintainer
-(setq ivy-count-format "(%d/%d) ") ;; changes the format of the number of results
-
-
-(global-set-key
- (kbd "C-s")
- 'swiper) ;; replaces i-search with swiper
-(global-set-key
- (kbd "M-x")
- 'counsel-M-x) ;; Gives M-x command counsel features
-(global-set-key
- (kbd "C-x C-f")
- 'counsel-find-file) ;; gives C-x C-f counsel features
-
-(global-set-key
- (kbd "C-x b")
- 'counsel-switch-buffer) ;; gives C-x C-f counsel features
-(global-set-key (kbd "<f1> f") 'counsel-describe-function)
-(global-set-key (kbd "<f1> v") 'counsel-describe-variable)
-(global-set-key (kbd "<f1> l") 'counsel-find-library)
-(global-set-key (kbd "<f2> i") 'counsel-info-lookup-symbol)
-(global-set-key (kbd "<f2> u") 'counsel-unicode-char)
-(global-set-key (kbd "C-c C-r") 'ivy-resume)
-
-(global-set-key (kbd "C-c g") 'counsel-git)
-(global-set-key (kbd "C-c j") 'counsel-git-grep)
-(global-set-key
- (kbd "C-c k")
- 'counsel-ag) ;; add counsel/ivy features to ag package
-(global-set-key (kbd "C-x l") 'counsel-locate)
-(global-set-key (kbd "C-S-o") 'counsel-rhythmbox)
-;;(define-key read-expression-map (kbd "C-r") 'counsel-expression-history)
-
-(define-key ivy-minibuffer-map (kbd "C-j") 'ivy-immediate-done)
-(define-key ivy-minibuffer-map (kbd "C-M-j") nil)
-
-;;set action options during execution of counsel-find-file
-;; replace "frame" with window to open in new window
-(ivy-set-actions
- 'counsel-find-file
- '(("j" find-file-other-frame "other frame")
-   ("b" counsel-find-file-cd-bookmark-action "cd bookmark")
-   ("x" counsel-find-file-extern "open externally")
-   ("d" delete-file "delete")
-   ("r" counsel-find-file-as-root "open as root")))
-
-;; set actions when running C-x b
-;; replace "frame" with window to open in new window
-(ivy-set-actions
- 'ivy-switch-buffer
- '(("j" switch-to-buffer-other-frame "other frame")
-   ("k" kill-buffer "kill")
-   ("r" ivy--rename-buffer-action "rename")))
-
-;; Use fuzzy matching for ivy in modes that aren't swiper
-(setq ivy-re-builders-alist
-      '((swiper . ivy--regex-plus) (t . ivy--regex-fuzzy)))
-
-;; Don't list .. and . in the ivy files search
-(setq ivy-extra-directories ())
-
-;; Persist histories across startups
-(use-package prescient)
-(use-package ivy-prescient)
-;; Use prescient to store history of search results and preference based on these
-(ivy-prescient-mode)
-
-(prescient-persist-mode t)
-
-(use-package counsel-projectile)
-(counsel-projectile-mode)
-(setq projectile-completion-system 'ivy)
-
-(use-package
- all-the-icons-ivy-rich
- :config (all-the-icons-ivy-rich-mode t))
-(use-package ivy-rich :config (ivy-rich-mode t))
-#+END_SRC
-** Company Settings
-Company was a great package, but I'm currently not using it. I migrated over to the simpler and more flexible Corfu.
-#+begin_src emacs-lisp :load no
-(use-package
- company
- :config
- ;; Dont wait to show completions
- (setq company-idle-delay 0)
- (setq company-minimum-prefix-length 1)
- (setq company-quickhelp-delay nil)
- (global-company-mode t)
- (use-package
-  company-async-files
-  :straight
-  '(company-async-files
-    :type git
-    :host github
-    :repo "CeleritasCelery/company-async-files"))
-
- ; I dont want these company backends
- (setq company-backends (remove 'company-bbdb company-backends))
- (setq company-backends (remove 'company-eclim company-backends))
- (setq company-backends (remove 'company-semantic company-backends))
- (setq company-backends (remove 'company-clang company-backends))
- (setq company-backends (remove 'company-xcode company-backends))
- (setq company-backends (remove 'company-cmake company-backends))
- ;; (setq company-backends (remove 'company-files company-backends))
- (setq company-backends
-       (remove 'company-dabbrev-code company-backends))
- (setq company-backends (remove 'company-dabbrev company-backends))
- ; I dont want these company backends
- (setq company-backends (remove 'company-bbdb company-backends))
- (setq company-backends (remove 'company-eclim company-backends))
- (setq company-backends (remove 'company-semantic company-backends))
- (setq company-backends (remove 'company-clang company-backends))
- (setq company-backends (remove 'company-xcode company-backends))
- (setq company-backends (remove 'company-cmake company-backends))
- ;; (setq company-backends (remove 'company-files company-backends))
- (setq company-backends
-       (remove 'company-dabbrev-code company-backends))
- (setq company-backends (remove 'company-dabbrev company-backends)))
-(use-package
- company-quickhelp
- :config ;; Sort by recent use
- (company-quickhelp-mode))
-(setq company-dabbrev-downcase nil)
-
-(use-package company-box :hook (company-mode . company-box-mode))
-(use-package company-prescient :config (company-prescient-mode t))
-
-;; Add yasnippet support for all company backends
-;; https://github.com/syl20bnr/spacemacs/pull/179
-(defvar company-mode/enable-yas t
-  "Enable yasnippet for all backends.")
-(defun company-mode/backend-with-yas (backend)
-  (if (or (not company-mode/enable-yas)
-          (and (listp backend) (member 'company-yasnippet backend)))
-      backend
-    (append
-     (if (consp backend)
-         backend
-       (list backend))
-     '(:with company-yasnippet))))
-(setq company-backends
-      (mapcar #'company-mode/backend-with-yas company-backends))
-(use-package company-posframe :config (company-posframe-mode t))
-#+end_src
 ** Marginalia
 #+begin_src emacs-lisp :load yes
 (use-package marginalia
@@ -1314,7 +1102,6 @@ Company was a great package, but I'm currently not using it. I migrated over to 
 #+end_src
 ** Consult
 #+begin_src emacs-lisp :load yes
-;; Example configuration for Consult
 ;; Example configuration for Consult
 (use-package
  consult
@@ -1443,15 +1230,15 @@ Company was a great package, but I'm currently not using it. I migrated over to 
  ;; By default `consult-project-function' uses `project-root' from project.el.
  ;; Optionally configure a different project root function.
  ;;;; 1. project.el (the default)
- ;; (setq consult-project-function #'consult--default-project--function)
+ (setq consult-project-function #'consult--default-project--function)
  ;;;; 2. vc.el (vc-root-dir)
  ;; (setq consult-project-function (lambda (_) (vc-root-dir)))
  ;;;; 3. locate-dominating-file
  ;; (setq consult-project-function (lambda (_) (locate-dominating-file "." ".git")))
  ;;;; 4. projectile.el (projectile-project-root)
- (autoload 'projectile-project-root "projectile")
- (setq consult-project-function
-       (lambda (_) (projectile-project-root)))
+ ;; (autoload 'projectile-project-root "projectile")
+ ;; (setq consult-project-function
+ ;;       (lambda (_) (projectile-project-root)))
  ;;;; 5. No project support
  ;; (setq consult-project-function nil)
  )
@@ -1837,6 +1624,37 @@ See also `eglot-server-capable' for :documentHighlightProvider."
 #+end_src
 ** Debug Adapter Protocal (DAP)
 * Programming Modes
+** Elisp
+*** Elisp code libraries
+#+begin_src emacs-lisp :load yes
+(use-package dash)
+(use-package ht)
+#+end_src
+*** Elisp UI
+#+begin_src emacs-lisp :load yes
+(use-package eros :config (eros-mode t))
+(use-package
+ lisp-extra-font-lock
+ :config (lisp-extra-font-lock-global-mode 1))
+
+(use-package elisp-docstring-mode)
+(use-package
+ highlight-function-calls
+ :hook (emacs-lisp-mode . highlight-function-calls-mode))
+
+(use-package format-all :hook (elisp-mode . format-all-mode))
+(use-package
+ inspector
+ :straight
+ '(inspector :type git :host github :repo "mmontone/emacs-inspector"))
+
+(setq eval-expression-print-length nil)
+(setq eval-expression-print-level nil)
+
+(add-to-list
+ 'auto-mode-alist
+ '("\\.dir-locals\\(?:-2\\)?\\.el\\'" . emacs-lisp-mode))
+#+end_src
 ** Python
 #+begin_src emacs-lisp :load yes
 (require 'python)
@@ -2376,12 +2194,6 @@ I have my own little hook to open the flycheck buffer with ~M-C~, and close it a
 (setq vc-ignore-dir-regexp (format "\\(%s\\)\\|\\(%s\\)"
                                    vc-ignore-dir-regexp
                                    tramp-file-name-regexp))
-#+end_src
-** Find file Projectile slowdown
-#+begin_src emacs-lisp :load yes
-(setq projectile-ignored-project-function
-      (lambda (project-root)
-        (string-match-p tramp-file-name-regexp project-root)))
 #+end_src
 ** Local PATH
 #+begin_src emacs-lisp :load yes
@@ -2939,9 +2751,7 @@ This is currently broken for me.
 (use-package treemacs-projectile)
 #+end_src
 #+begin_src emacs-lisp :load yes
-(use-package
- treemacs-icons-dired
- :config (treemacs-icons-dired-mode))
+(use-package treemacs-icons-dired :config (treemacs-icons-dired-mode))
 #+end_src
 * Appearance
 #+begin_src emacs-lisp :load yes
@@ -2957,10 +2767,6 @@ Leuven is always a nice option, beautiful with Org Mode.
   :config
   (load-theme 'leuven-dark t))
 #+end_src
-
-#+RESULTS:
-: #s(hash-table data (:use-package (26250 43063 586916 0) :init (26250 43063 586914 0) :config (26250 43063 586907 0) :config-secs (0 0 6391 0) :init-secs (0 0 8900 0) :use-package-secs (0 2 807731 0)))
-
 *** [[https://github.com/catppuccin/emacs][Catpuccin Theme]]
 Trying this theme out for a little bit.
 #+begin_src emacs-lisp :load yes
